--- a/.github/workflows/gha_example.yml
+++ b/.github/workflows/gha_example.yml
@@ -4,8 +4,8 @@ name: gha_example:GitHub Action exercise
 
 on:
   workflow_dispatch:
-#  push:
-#    branches: [ main ]
+  push:
+    branches: [ main ]
 
 jobs:
   build:
@@ -13,18 +13,19 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-
+      - uses: actions/checkout@v3
+      
       # Instalacja środowiska Docker + Buildx
       - name: Buildx set-up
-        uses: #########################
+        uses: docker/setup-buildx-action@v2
         
       # Instalacja QEMU
       - name: Docker Setup QEMU
-        uses: ##########################
+        uses: docker/setup-qemu-action@v2
 
       # Logowanie do Dockerhub-a
       - name: Login to DockerHub
-        uses: #############################
+        uses: docker/login-action@v2
         with:
           username: ${{secrets.DOCKERHUB_USERNAME}}
           password: ${{secrets.DOCKERHUB_TOKEN}}
@@ -32,12 +33,12 @@ jobs:
       # Budowa obrazu dla dwóch architektur sprzętowych 
       # oraz przesłanie do własnego repo na Dockerhub
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           platforms: linux/arm64/v8,linux/amd64 
-          context: #############################
-          file: ################################
-          push: ################################
+          context: ./
+          file: ./Dockerfile_prod
+          push: true
           tags: |
-            ##################################### 
+            piter27t/lab3:ghlab3_zadanie 
       
